# keycloak-auth-utils

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pre-commit.sh  pyproject.toml  requirements.txt  run_tests.py  tox.ini
.github/workflows/: python-publish.yml  test.yml
requirements/: dev.txt
src/keycloak_utils/: __init__.py  errors.py  utils.py
src/keycloak_utils/authentication/: fastapi.py  rest_framework.py
src/keycloak_utils/backend/: base.py  fastapi.py  rest_framework.py
src/keycloak_utils/consumer/: core.py
src/keycloak_utils/consumer/django/: strategies.py
src/keycloak_utils/contrib/django/: apps.py  auth.py  conf.py  serializers.py  urls.py  views.py
src/keycloak_utils/contrib/django/management/commands/: run_consumer.py  sync_keycloak.py
src/keycloak_utils/manager/: base.py  fastapi.py  rest_framework.py
src/keycloak_utils/sync/: __init__.py  kc_admin.py  predefined.py  static.py  tasks.py
src/keycloak_utils/sync/django/: core.py  mixins.py
src/keycloak_utils/verifier/: base.py  fastapi.py  rest_framework.py
tests/: constants.py
tests/fastapi/: app.py
tests/test_fastapi/: app.py  test_authentication.py
tests/test_rest_framework/: settings.py  urls.py
tests/test_rest_framework/polls/: __init__.py  apps.py  authentication.py  models.py  urls.py  views.py
tests/test_rest_framework/polls/migrations/: 0001_initial.py
tests/test_rest_framework/tests/: test_authentication.py  test_consumer.py  test_contrib_views.py  test_protocol_mapper.py  test_schema_based.py  test_views.py
