[tool.black]
line_length = 88
force_exclude = """
        (.github/*)
    """

[tool.isort]
profile = "black"
quiet = "True"
skip_glob = ".github/*"
skip_gitignore = "True"
combine_as_imports = "True"
line_length = 88

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keycloak-utils"
version = "0.0.1"
authors = [
  { name="Jerin Peter George", email="jerinpetergeorge@gmail.com" },
]
description = "Helper classes for keycloak authentication in Django and FastAPI"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Environment :: Web Environment",
        "Environment :: Console",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Utilities",
]
dependencies = [
        "Django>=2.2",
]

[project.urls]
"Homepage" = "https://github.com/jerinpetergeorge/keycloak-auth-utils"
